--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "joi": "^17.12.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.2.4",
     "node-modules": "^0.0.1"
